@@ -1,3 +1,13 @@
+2010-01-22  Joern Rennecke  <amylaar@spamcop.net>
+
+	gcc PR libstdc++/36101, gcc PR libstdc++/42813
+	* configure.ac (target_configdirs): Substitute.
+	* Makefile.def: Bootstrap target module libgomp.
+	Add dependency of all-target-libstdc++-v3 on configure-target-libgomp.
+	* Makefile.tpl (TARGET_CONFIGDIRS): New makefile variable.
+	(BASE_TARGET_EXPORTS): Export TARGET_CONFIGDIRS.
+	* configure, Makefile.in: Regenerate.
+
 2009-12-09  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* libtool.m4: Sync from git Libtool.
